# src/routers/index.js
@@ -2,15 +2,11 @@ import { Router } from 'express';
 import recipesRouter from './recipes.js';
 import authRouter from './auth.js';
 import usersRouter from './users.js';
-import ingredientsRouter from './ingredient.js';
-import categoriesRouter from './category.js';
 
 const router = Router();
 
 router.use('/recipes', recipesRouter);
 router.use('/auth', authRouter);
 router.use('/users', usersRouter);
-router.use('/ingredients', ingredientsRouter);
-router.use('/categories', categoriesRouter);
 
 export default router;
