# src/validation/recipe.js
@@ -8,13 +8,12 @@ const ingredientSchema = Joi.object({
 
 // Joi-схема для створення нового рецепту
 export const createRecipeSchema = Joi.object({
-  name: Joi.string().max(64).required(),
+  title: Joi.string().max(64).required(),
   decr: Joi.string().max(200).required(),
   cookiesTime: Joi.number().integer().min(1).max(360).required(),
   cals: Joi.number().integer().min(1).max(10000).optional(),
   category: Joi.string().required(),
   ingredients: Joi.array().items(ingredientSchema).min(2).max(16).required(),
-  ingredientAmount: Joi.number().integer().min(2).max(16).required(),
   instruction: Joi.string().max(1200).required(),
   recipeImg: Joi.string().uri().optional(),
   // owner не приймаємо від клієнта, беремо з токена
